# snake-neural-networks-c

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
